--- a/template.tex
+++ b/template.tex
@@ -8,9 +8,7 @@
 %opening
 \title{Exercises to the linear algebra $\RN{2}$,\\
 series }
-\author{Daniel Mayer\\
-Matrikel:\\
-2519400}
+\author{}
 
 \begin{document}
 
